portal/static/less/gil.less
/* ... */
#loadingIndicator {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 2em;
  width: 2em;
  overflow: show;
  font-size: 1em;
  text-align: center;
  z-index: 99999;
  color: #444;
  margin: auto;
}
#loadingIndicator:before {
  content: ' ';
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #becace;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
  filter: alpha(opacity=60);
  -moz-opacity: 0.6;
  -khtml-opacity: 0.6;
  opacity: 0.6;
}
#loadingIndicator i {
  font-size: 1em;
}
/* :not(:required) hides these rules from IE9 and below */
#loadingIndicator:not(:required) {
  /* hide "loading..." text */
  font: 0/0 a;
  color: transparent;
  text-shadow: none;
  background-color: transparent;
  border: 0;
}
#loadingIndicator:not(:required):after {
  content: ' ';
  display: block;
  font-size: 10px;
  width: 1em;
  height: 1em;
  margin-top: -0.5em;
  -webkit-animation: spinner 1200ms infinite linear;
  -moz-animation: spinner 1200ms infinite linear;
  -ms-animation: spinner 1200ms infinite linear;
  -o-animation: spinner 1200ms infinite linear;
  animation: spinner 1200ms infinite linear;
  border-radius: 0.5em;
  -webkit-box-shadow: rgba(0, 0, 0, 0.75) 1.5em 0 0 0, rgba(0, 0, 0, 0.75) 1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) 0 1.5em 0 0, rgba(0, 0, 0, 0.75) -1.1em 1.1em 0 0, rgba(0, 0, 0, 0.5) -1.5em 0 0 0, rgba(0, 0, 0, 0.5) -1.1em -1.1em 0 0, rgba(0, 0, 0, 0.75) 0 -1.5em 0 0, rgba(0, 0, 0, 0.75) 1.1em -1.1em 0 0;
  box-shadow: rgba(0, 0, 0, 0.75) 1.5em 0 0 0, rgba(0, 0, 0, 0.75) 1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) 0 1.5em 0 0, rgba(0, 0, 0, 0.75) -1.1em 1.1em 0 0, rgba(0, 0, 0, 0.75) -1.5em 0 0 0, rgba(0, 0, 0, 0.75) -1.1em -1.1em 0 0, rgba(0, 0, 0, 0.75) 0 -1.5em 0 0, rgba(0, 0, 0, 0.75) 1.1em -1.1em 0 0;
}
/* Animation */
@-webkit-keyframes spinner {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    -o-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@-moz-keyframes spinner {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    -o-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@-o-keyframes spinner {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    -o-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@keyframes spinner {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    -o-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
.home--container {
    border-width: 0px;
    width: 100%;
    height: 100%;
    position: relative;
    margin: 0 auto;
    top: 170px;
    left: 0;
    bottom: 0;
    right: 0;
    background: inherit;
    background-color: rgba(95, 103, 110, 1);
    box-sizing: border-box;
    border-width: 1px;
    border-style: solid;
    border-color: rgba(121, 121, 121, 1);
    border-radius: 0px;
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
    box-shadow: none;
    overflow: auto;
    z-index: 1;
}
.home--header {
    border-width: 0px;
    margin: 0 auto;
    width: 600px;
    max-width: 100%;
    height: 120px;
    font-family: 'Arial';
    font-weight: 400;
    font-style: normal;
    font-size: 1.5em;
    color: #FFFFFF;
    text-align: center;
    position: relative;
    padding: 1em 0;
}
.home--items-wrapper {
    position: relative;
    top: 210px;
    background-color: rgba(95, 103, 110, 1);
}
.home--item-container, .home--item-container-full, .home--registration-container {
    background: inherit;
    background-color: #43484d;
    box-sizing: border-box;
    border-width: 1px;
    border-style: solid;
    border-color: rgba(121, 121, 121, 1);
    border-radius: 0px;
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
    box-shadow: none;
    font-family: 'Arial Bold', 'Arial Regular', 'Arial';
    font-weight: 700;
    font-style: normal;
    font-size: 1em;
    color: #FFFFFF;
    height: 320px;
    display: block;
    padding: 40px;
    float: left;
    overflow-y: auto;
}

.home--item-container {
    float: left;
    width: 400px;
    margin: 0 auto;
    position: relative;
    padding: 3em;
    text-align: center;
    transition: all 0.5s ease-in;
}

.home--item-container-full {
    text-align: center;
}

.home--disabled-button {
    opacity: 0.6;
}
#portalMain .page-intro {
    padding: 1.2em;
}
#portalMain .button-callout {
    padding: 0.5em 0 !important;
    margin: 0.1em 0 !important;
}
#portalMain .icon-box__button span {
    font-size: 0.75em;
}
#portalMain .icon-box__lowhead {
    font-size: 1.2em;
}
#portalMain .page-intro__main {
    margin-bottom: 0;
}
.home--footer-container {
    margin-top: 25em;
    overflow: hidden;
}

.home--registraion-wrapper {
    margin-top: 1.3em;
}
.home--item-container-full, .home--registration-container {
    margin: 0 1em 0 1.1em;
    width: 100%;
    max-width: 100%;
    padding: 3em 4em 1.5em 3em
}
.home--items-wrapper .icon-box__button {
    line-height: 26px;
    padding: 20px;
}
.home--registration-container p {
    font-size: 1.2em;
    padding: 1em 0;
}
/* ... */

